tests/compile-fail/ident_with_wrong_ret_type.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/ident_with_wrong_ret_type.rs:7:22
  |
7 |     #[darling(with = wrong)]
  |                      ^^^^^
  |                      |
  |                      expected fn pointer, found fn item
  |                      arguments to this function are incorrect
  |
  = note: expected fn pointer `fn(Option<syn::Ident>) -> Result<syn::Ident, darling::Error>`
                found fn item `fn(syn::Ident) -> Result<String, darling::Error> {wrong}`
help: the return type of this call is `fn(syn::Ident) -> Result<String, darling::Error> {wrong}` due to the type of the argument passed
 --> tests/compile-fail/ident_with_wrong_ret_type.rs:7:22
  |
7 |     #[darling(with = wrong)]
  |                      ^^^^^ this argument influences the return type of `identity`
note: function defined here
 --> $RUST/core/src/convert/mod.rs
